RESOLVED FIXED25383
Updating SVG size does not update CSS width/height
https://bugs.webkit.org/show_bug.cgi?id=25383
Summary Updating SVG size does not update CSS width/height
Eric Seidel (no email)
Reported 2009-04-24 16:08:10 PDT
This can be seen by putting a border around an <svg> element and then changing the width/height via javascript. I fixed this bug with an ugly hack (there is currently no better way) :( And I've updated our tests to cover this case.
Attachments
Fix width/height updates from JS (15.91 KB, patch)
2009-04-24 16:08 PDT, Eric Seidel (no email)
no flags
Simpler patch, just the code change (5.86 KB, patch)
2009-04-24 16:17 PDT, Eric Seidel (no email)
simon.fraser: review+
Eric Seidel (no email)
Comment 1 2009-04-24 16:08:27 PDT
Created attachment 29773 [details] Fix width/height updates from JS 28 files changed, 90 insertions(+), 29 deletions(-)
Eric Seidel (no email)
Comment 2 2009-04-24 16:17:13 PDT
Created attachment 29775 [details] Simpler patch, just the code change 7 files changed, 57 insertions(+), 4 deletions(-)
Eric Seidel (no email)
Comment 3 2009-04-24 16:54:57 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog M LayoutTests/platform/mac/svg/custom/viewport-update2-expected.checksum M LayoutTests/platform/mac/svg/custom/viewport-update2-expected.png M LayoutTests/platform/mac/svg/custom/viewport-update2-expected.txt M LayoutTests/svg/custom/viewport-update2.svg M WebCore/ChangeLog M WebCore/svg/SVGSVGElement.cpp Committed r42854
Note You need to log in before you can comment on or make changes to this bug.