        Reviewed by Simon Fraser.

https://bugs.webkit.org/show_bug.cgi?id=25383
        Changing SVG size via JS does not update CSS width/height

        Add an ugly hack to fix CSS width/height updates from JS.

        We can't easily call setAttribute when width/height changes
        as that would cause infinite recursion (as we'd try to set
        the animation storage from the attributes)

        For now, when we get notification that JS changed width/height
        we copy what parseMappedAttribute does and update the CSS values as well.

        A better fix for this would be:
        https://bugs.webkit.org/show_bug.cgi?id=25383

        * svg/SVGSVGElement.cpp:
        (WebCore::updateCSSForAttribute):
        (WebCore::SVGSVGElement::svgAttributeChanged):

Canonical link: https://commits.webkit.org/34904@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42854 268f45cc-cd09-0410-ab3c-d52691b4dbfc